--- a/dist_cal.ipynb
+++ b/dist_cal.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,6 +245,49 @@
     "        d_maturity\n",
     "    )\n",
     "    return total_distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Participant(id='2ebad15c-c0ef-4c04-ba98-c5d98403a90c', university='Universitat Internacional de Catalunya (UIC)', interests='[1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]', preferred_role='Design', objective=\"I'm super stoked to be participating in this datathon! My goal is to soak up the vibes, learn from others, and have an absolute blast. I want to join in on as many events and workshops as I can, learn new skills and insights, and make friends with like-minded peeps. I'm more about having fun and making connections than about trying to win (although, I do love a good challenge!). My objective is to leave this datathon feeling refreshed, inspired, and with new friendships to look back on. Bring it on!\", introduction=\"Hi there! I'm Sara, and I'm super excited to be here at the datathon. As a university student, I'm always looking for new challenges and ways to learn. I've got a background in programming and love fiddling with coding - whether it's building something new or just solving problems. I'm all about creative solutions and finding innovative ways to get things done. Outside of code, you can find me exploring fintech, blockchain, and cybersecurity. I'm looking forward to meeting other curious and ambitious folks and having an amazing time here at the datathon!\", technical_project='One project that really got me excited was building a personal finance tracker using Flask and MongoDB! I love fintech, and being able to create something that actually helps people manage their finances was super rewarding. I built a simple app that allowed users to track their expenses, income, and even set budgets for themselves. The best part was learning how to work with MongoDB, which was a new experience for me. It was amazing to see the project come together, and now I actually use it to track my own finances!', future_excitement=\"The future is so exciting! As I look ahead, I'm thrilled to think about the innovative projects I'll be a part of. I've always been fascinated by the potential of fintech to revolutionize the way we manage our money and interact with financial institutions. In the next 10 years, I dream of being part of a startup that develops a decentralized banking system built on blockchain technology. Imagine having control over your finances, being able to securely share information and transfer funds with ease. The possibilities are endless, and I can't wait to be a part of shaping this future.\", fun_fact=\"Hey there! When I'm not coding, I love to belt out my favorite rock ballads in the shower. My friends even call me the 'Queen of Shower Riffs.' Nothing gets me pumped up like a little Ariana Grande and some foggy mirrors\", friend_registration='[]', preferred_team_size=4, availability='[1, 1, 0, 1, 1]', programming_skills=\"{'Data Visualization': 2, 'Flask': 4, 'React Native': 6, 'UI/UX Design': 3, 'TypeScript': 3, 'Git': 2, 'React': 5, 'MongoDB': 2, 'HTML/CSS': 5}\", interest_in_challenges=\"['Mango Challenge', 'Restb.ai Challenge', 'AED Challenge']\", experience=4.394449154672439, languages_ordered=\"['Catalan', 'English']\", maturity=4.6)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "participants['2ebad15c-c0ef-4c04-ba98-c5d98403a90c']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'values'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[72], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mcombined_distance\u001b[49m\u001b[43m(\u001b[49m\u001b[43mparticipants\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m2ebad15c-c0ef-4c04-ba98-c5d98403a90c\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mparticipants\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m2ebad15c-c0ef-4c04-ba98-c5d98403a90c\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mweights\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "Cell \u001b[1;32mIn[66], line 6\u001b[0m, in \u001b[0;36mcombined_distance\u001b[1;34m(participant1, participant2, weigths)\u001b[0m\n\u001b[0;32m      4\u001b[0m d_preferred_role \u001b[38;5;241m=\u001b[39m dist_preferred_role(participant1\u001b[38;5;241m.\u001b[39mpreferred_role, participant2\u001b[38;5;241m.\u001b[39m preferred_role)\n\u001b[0;32m      5\u001b[0m d_availability \u001b[38;5;241m=\u001b[39m dist_one_hot_encoding(participant1\u001b[38;5;241m.\u001b[39mavailability, participant2\u001b[38;5;241m.\u001b[39m availability)\n\u001b[1;32m----> 6\u001b[0m d_programming_skills \u001b[38;5;241m=\u001b[39m \u001b[43mdist_programming_skills\u001b[49m\u001b[43m(\u001b[49m\u001b[43mparticipant1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprogramming_skills\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparticipant2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprogramming_skills\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m d_interests_in_challenges \u001b[38;5;241m=\u001b[39m dist_one_hot_encoding(participant1\u001b[38;5;241m.\u001b[39minterest_in_challenges, participant2\u001b[38;5;241m.\u001b[39minterest_in_challenges)\n\u001b[0;32m      8\u001b[0m d_languages \u001b[38;5;241m=\u001b[39m dist_language(participant1\u001b[38;5;241m.\u001b[39mlanguages_ordered, participant2\u001b[38;5;241m.\u001b[39mlanguages_ordered)\n",
+      "Cell \u001b[1;32mIn[8], line 2\u001b[0m, in \u001b[0;36mdist_programming_skills\u001b[1;34m(skills_1, skills_2)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdist_programming_skills\u001b[39m(skills_1, skills_2) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mfloat\u001b[39m:\n\u001b[1;32m----> 2\u001b[0m     avg_level_1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(\u001b[43mskills_1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m()) \u001b[38;5;241m/\u001b[39m \u001b[38;5;28mlen\u001b[39m(skills_1) \u001b[38;5;28;01mif\u001b[39;00m skills_1 \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m      4\u001b[0m     avg_level_2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(skills_2\u001b[38;5;241m.\u001b[39mvalues()) \u001b[38;5;241m/\u001b[39m \u001b[38;5;28mlen\u001b[39m(skills_2) \u001b[38;5;28;01mif\u001b[39;00m skills_2 \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m      6\u001b[0m     distance_avg_levels \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mabs\u001b[39m(avg_level_1 \u001b[38;5;241m-\u001b[39m avg_level_2)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'values'"
+     ]
+    }
+   ],
+   "source": [
+    "print(combined_distance(participants['2ebad15c-c0ef-4c04-ba98-c5d98403a90c'],participants['2ebad15c-c0ef-4c04-ba98-c5d98403a90c'], weights))"
    ]
   }
  ],
