--- a/dist_cal.ipynb
+++ b/dist_cal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,41 +11,45 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import math\n",
+    "import ast\n",
     "from dataclasses import dataclass\n",
+    "from collections import defaultdict\n",
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler, LabelEncoder\n",
     "from sklearn.feature_extraction.text import CountVectorizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
-    "@dataclass\n",
     "class Participant:\n",
-    "    id: str\n",
-    "    university: str\n",
-    "    interests: list[str]\n",
-    "    preferred_role: str\n",
-    "    objective: str\n",
-    "    introduction: str\n",
-    "    technical_project: str\n",
-    "    future_excitement: str\n",
-    "    fun_fact: str\n",
-    "    friend_registration: list[str]\n",
-    "    preferred_team_size: int\n",
-    "    availability: list[int]\n",
-    "    programming_skills: dict[str, int]\n",
-    "    interest_in_challenges: list[str]\n",
-    "    experience: float\n",
-    "    languages_ordered: list[str]\n",
-    "    maturity: float"
+    "    def __init__(self, id, university, interests, preferred_role, objective, introduction, technical_project,\n",
+    "                 future_excitement, fun_fact, friend_registration, preferred_team_size, availability,\n",
+    "                 programming_skills, interest_in_challenges, experience, languages_ordered, maturity):\n",
+    "        self.id = id\n",
+    "        self.university = university\n",
+    "        self.interests = interests\n",
+    "        self.preferred_role = preferred_role\n",
+    "        self.objective = objective\n",
+    "        self.introduction = introduction\n",
+    "        self.technical_project = technical_project\n",
+    "        self.future_excitement = future_excitement\n",
+    "        self.fun_fact = fun_fact\n",
+    "        self.friend_registration = friend_registration\n",
+    "        self.preferred_team_size = preferred_team_size\n",
+    "        self.availability = availability\n",
+    "        self.programming_skills = programming_skills\n",
+    "        self.interest_in_challenges = interest_in_challenges\n",
+    "        self.experience = experience\n",
+    "        self.languages_ordered = languages_ordered\n",
+    "        self.maturity = maturity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,17 +58,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = \"data/datathon_participants.json\"\n",
-    "participants = load_participants(data_path)\n"
+    "data_path = \"data/datathon_participants.json\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,18 +192,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 170,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"{'Data Visualization': 2, 'Flask': 4, 'React Native': 6, 'UI/UX Design': 3, 'TypeScript': 3, 'Git': 2, 'React': 5, 'MongoDB': 2, 'HTML/CSS': 5}\""
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.read_csv('clean_data.csv')\n",
     "\n",
-    "participants = {row['id']: Participant(**row) for _, row in df.iterrows()}\n"
+    "participants = {row['id']: Participant(**row) for _, row in df.iterrows()}\n",
+    "participants['2ebad15c-c0ef-4c04-ba98-c5d98403a90c'].programming_skills\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "participants_dict = {}\n",
+    "\n",
+    "for _, row in df.iterrows():\n",
+    "    programming_skills = ast.literal_eval(row['programming_skills'])  \n",
+    "    interests = ast.literal_eval(row['interests']) \n",
+    "    friend_registration = ast.literal_eval(row['friend_registration'])  \n",
+    "    availability = ast.literal_eval(row['availability'])  \n",
+    "    interest_in_challenges = ast.literal_eval(row['interest_in_challenges'])  \n",
+    "    languages_ordered = ast.literal_eval(row['languages_ordered'])  \n",
+    "\n",
+    "    \n",
+    "    participant = Participant(\n",
+    "        id=row['id'],\n",
+    "        university=row['university'],\n",
+    "        interests=interests,  \n",
+    "        preferred_role=row['preferred_role'],\n",
+    "        objective=row['objective'],\n",
+    "        introduction=row['introduction'],\n",
+    "        technical_project=row['technical_project'],\n",
+    "        future_excitement=row['future_excitement'],\n",
+    "        fun_fact=row['fun_fact'],\n",
+    "        friend_registration=friend_registration,  \n",
+    "        preferred_team_size=row['preferred_team_size'],\n",
+    "        availability=availability,  \n",
+    "        programming_skills=programming_skills,  \n",
+    "        interest_in_challenges=interest_in_challenges,  \n",
+    "        experience=row['experience'],\n",
+    "        languages_ordered=languages_ordered,  \n",
+    "        maturity=row['maturity']\n",
+    "    )\n",
+    "    \n",
+    "    participants_dict[row['id']] = participant"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +304,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "participant1 = participants_dict['2ebad15c-c0ef-4c04-ba98-c5d98403a90c']\n",
+    "participant2 = participants_dict['2ebad15c-c0ef-4c04-ba98-c5d98403a90c']\n",
+    "\n",
+    "print(dist_university(participant1.university, participant2.university)*weights['university']\n",
+    "dist_one_hot_encoding(participant1.interests, participant2. interests)*weights['interests']\n",
+    "dist_preferred_role(participant1.preferred_role, participant2. preferred_role)*weights['preferred_role']\n",
+    "dist_one_hot_encoding(participant1.availability, participant2. availability)*weights['availability']\n",
+    "dist_programming_skills(participant1.programming_skills, participant2.programming_skills)*weights['programming_skils']\n",
+    "dist_one_hot_encoding(participant1.interest_in_challenges, participant2.interest_in_challenges)*weights['interests_in_challenges']\n",
+    "dist_language(participant1.languages_ordered, participant2.languages_ordered)*weights['languages']\n",
+    "abs(participant1.experience - participant2.experience)*weights['experience']\n",
+    "abs(participant1.maturity - participant2.maturity)*weights['maturity']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3111111111111111"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_distance(participants_dict['2ebad15c-c0ef-4c04-ba98-c5d98403a90c'],participants_dict['2ebad15c-c0ef-4c04-ba98-c5d98403a90c'],weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -269,25 +375,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'values'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[72], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mcombined_distance\u001b[49m\u001b[43m(\u001b[49m\u001b[43mparticipants\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m2ebad15c-c0ef-4c04-ba98-c5d98403a90c\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mparticipants\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m2ebad15c-c0ef-4c04-ba98-c5d98403a90c\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mweights\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "Cell \u001b[1;32mIn[66], line 6\u001b[0m, in \u001b[0;36mcombined_distance\u001b[1;34m(participant1, participant2, weigths)\u001b[0m\n\u001b[0;32m      4\u001b[0m d_preferred_role \u001b[38;5;241m=\u001b[39m dist_preferred_role(participant1\u001b[38;5;241m.\u001b[39mpreferred_role, participant2\u001b[38;5;241m.\u001b[39m preferred_role)\n\u001b[0;32m      5\u001b[0m d_availability \u001b[38;5;241m=\u001b[39m dist_one_hot_encoding(participant1\u001b[38;5;241m.\u001b[39mavailability, participant2\u001b[38;5;241m.\u001b[39m availability)\n\u001b[1;32m----> 6\u001b[0m d_programming_skills \u001b[38;5;241m=\u001b[39m \u001b[43mdist_programming_skills\u001b[49m\u001b[43m(\u001b[49m\u001b[43mparticipant1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprogramming_skills\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparticipant2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprogramming_skills\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m d_interests_in_challenges \u001b[38;5;241m=\u001b[39m dist_one_hot_encoding(participant1\u001b[38;5;241m.\u001b[39minterest_in_challenges, participant2\u001b[38;5;241m.\u001b[39minterest_in_challenges)\n\u001b[0;32m      8\u001b[0m d_languages \u001b[38;5;241m=\u001b[39m dist_language(participant1\u001b[38;5;241m.\u001b[39mlanguages_ordered, participant2\u001b[38;5;241m.\u001b[39mlanguages_ordered)\n",
-      "Cell \u001b[1;32mIn[8], line 2\u001b[0m, in \u001b[0;36mdist_programming_skills\u001b[1;34m(skills_1, skills_2)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdist_programming_skills\u001b[39m(skills_1, skills_2) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mfloat\u001b[39m:\n\u001b[1;32m----> 2\u001b[0m     avg_level_1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(\u001b[43mskills_1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m()) \u001b[38;5;241m/\u001b[39m \u001b[38;5;28mlen\u001b[39m(skills_1) \u001b[38;5;28;01mif\u001b[39;00m skills_1 \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m      4\u001b[0m     avg_level_2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(skills_2\u001b[38;5;241m.\u001b[39mvalues()) \u001b[38;5;241m/\u001b[39m \u001b[38;5;28mlen\u001b[39m(skills_2) \u001b[38;5;28;01mif\u001b[39;00m skills_2 \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m      6\u001b[0m     distance_avg_levels \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mabs\u001b[39m(avg_level_1 \u001b[38;5;241m-\u001b[39m avg_level_2)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'values'"
-     ]
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(combined_distance(participants['2ebad15c-c0ef-4c04-ba98-c5d98403a90c'],participants['2ebad15c-c0ef-4c04-ba98-c5d98403a90c'], weights))"
+    "type(participants['2ebad15c-c0ef-4c04-ba98-c5d98403a90c'].programming_skills)"
    ]
   }
  ],
